Added pagination and task schema
